end added product

--- a/8/домашнее_задание/style.css
+++ b/8/домашнее_задание/style.css
@@ -106,7 +106,7 @@ body {
   }
 }
 
-.basketContent {
+.basketTitle {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
@@ -118,8 +118,8 @@ body {
   font-weight: bold;
 }
 
-/*.basketHeader {
-  font-weight: bold;
+/*.basketContent {
+ 
 }*/
 
 .basketTotal {
