--- a/8/домашнее_задание/style.css
+++ b/8/домашнее_задание/style.css
@@ -106,7 +106,8 @@ body {
   }
 }
 
-.basketTitle {
+.basketTitle,
+.product {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
