--- a/8/домашнее_задание/style.css
+++ b/8/домашнее_задание/style.css
@@ -117,16 +117,19 @@ body {
   border-bottom: 1px solid #ebebeb;
   padding-bottom: 10px;
   font-weight: bold;
+  font-size: 20px;
 }
 
-/*.basketContent {
- 
-}*/
+.product {
+  font-weight: normal;
+  font-size: 16px;
+}
 
 .basketTotal {
   font-weight: bold;
   text-align: right;
   margin-right: 15px;
+  font-size: 20px;
 }
 
 .newArrivals {
