--- a/8/домашнее_задание/style.css
+++ b/8/домашнее_задание/style.css
@@ -102,14 +102,14 @@ body {
 
 @media (min-width: 552px) {
   .basket {
-    width: 500px;
+    width: 600px;
   }
 }
 
 .basketTitle,
 .product {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 10px;
   text-align: center;
   margin-bottom: 10px;
@@ -123,6 +123,12 @@ body {
 .product {
   font-weight: normal;
   font-size: 16px;
+}
+.product i {
+  color: black;
+  background: white;
+  width: 32px;
+  height: 32px;
 }
 
 .basketTotal {
